fixed off centering

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,9 @@ nav li {
 	position: absolute;
 	bottom: 0px;
 	text-align: center;
-	left: 40%;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
 }
 
 #continue p {
